Messed with the Bootstrap

--- a/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/Bootstrap.cshtml
+++ b/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/Bootstrap.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 <div class="container-fluid p-5 bg-primary text-white text-center">
-    <h1>My First Bootstrap Page</h1>
+    <h1>Welcome to West Virgnia</h1>
     <p>Resize this responsive page to see the effect!</p>
 </div>
 
