added image to info page

--- a/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/Information.cshtml
+++ b/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/Information.cshtml
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container-fluid p-5 bg-primary text-white text-center">
-        <h1>My First Bootstrap Page</h1>
+        <h1>Information of West Virginia</h1>
         <p>Resize this responsive page to see the effect!</p>
     </div>
 
@@ -36,6 +36,7 @@
             </div>
         </div>
     </div>
-
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/WVirginiaCo.png/220px-WVirginiaCo.png" alt="image of a map of west virginia and the counties">
+    <button onclick="revealTheInformation"> Reveal Information </button>
 </body>
 </html>
