--- a/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/Index.cshtml
+++ b/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/Index.cshtml
@@ -3,8 +3,67 @@
 @{
     ViewData["Title"] = "Home page";
 }
+<div class="container-fluid p-5 bg-primary text-white text-center" style="background-image: url('https://cdn.britannica.com/01/94601-050-65BA28A4/Sandstone-Falls-New-River-Gorge-National-West.jpg'); height: 500px; width: 100%;">
+    <h1 style="font-size:60px; font-family:'Playfair Display', serif;  -webkit-text-stroke: 1px yellow;"> Wild And Wonderful</h1>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 style="font-family:'Playfair Display', serif; font-size:120px;">West Virgina</h1>
 </div>
+
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-sm-4">
+            <h3>Column 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+        </div>
+        <div class="col-sm-4">
+            <h3>Column 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+        </div>
+        <div class="col-sm-4">
+            <h3>Column 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+        </div>
+    </div>
+</div>
+<section class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">Adventure Appalachia</h1>
+        <p class="lead">Explore the beauty of Appalachia</p>
+        <button class="btn btn-primary">Get Started</button>
+    </div>
+</section>
+
+<!-- Features Section -->
+<section class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Hiking</h2>
+            <p>Explore the Appalachian Trail and discover hidden gems</p>
+            <button class="btn btn-primary">Learn More</button>
+        </div>
+        <div class="col-md-4">
+            <h2>Whitewater Rafting</h2>
+            <p>Experience the thrill of whitewater rafting in Appalachia</p>
+            <button class="btn btn-primary">Learn More</button>
+        </div>
+        <div class="col-md-4">
+            <h2>Camping</h2>
+            <p>Get back to nature and camp under the stars</p>
+            <button class="btn btn-primary">Learn More</button>
+        </div>
+    </div>
+</section>
+
+<!-- Call to Action Section -->
+<section class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Plan Your Adventure</h2>
+            <p>Get ready for the ultimate Appalachian adventure</p>
+            <button class="btn btn-primary">Plan Now</button>
+        </div>
+    </div>
+</section>
