--- a/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/Shared/_Layout.cshtml
+++ b/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Contacts">Contacts</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Map">Map</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
