Making a quick change

--- a/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/map.cshtml
+++ b/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/map.cshtml
@@ -3,7 +3,7 @@
 <body>
 
 <h1>HTML Image</h1>
-<p>I need to change that awful memo real quick</p>
+<p>This is just a starter commit</p>
 </body>  
 </html>
   
