Imported Map of West Virginia, added key attractions, changed style of heading.

--- a/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/map.cshtml
+++ b/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/map.cshtml
@@ -1,9 +1,19 @@
-﻿<!DOCTYPE html>
-<html>
+﻿@page
+@model MIS353_ApplicationGroupKEAH.Pages.mapModel
+@{
+}
 <body>
 
-<h1>HTML Image</h1>
-<p>This is just a starter commit</p>
+<h1 style="text-align-center;color:sandybrown">Map of West Virginia</h1>
+    <img src="https://geology.com/cities-map/map-of-west-virginia-cities.gif" style="width:1150px;height:800px;" />
+<h2> Key Attractions </h2>
+<ul>
+    <li>Coopers Rock</li>
+    <li>Cheat Lake</li>
+    <li>New River Gorge Bridge</li>
+    <li>Harper's Ferry</li>
+</ul>
+
 </body>  
 </html>
   
