--- a/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/Shared/_Layout.cshtml
+++ b/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/Shared/_Layout.cshtml
@@ -32,11 +32,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Information">Information</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Contacts">Contacts</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/map">Map</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Map">Map</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Contacts">Contacts</a>
                         </li>
+                        
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
