--- a/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/map.cshtml
+++ b/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/map.cshtml
@@ -6,14 +6,28 @@
 
 <h1 style="text-align-center;color:sandybrown">Map of West Virginia</h1>
     <img src="https://geology.com/cities-map/map-of-west-virginia-cities.gif" style="width:1150px;height:800px;" />
-<h2> Key Attractions </h2>
-<ul>
-    <li>Coopers Rock</li>
-    <li>Cheat Lake</li>
-    <li>New River Gorge Bridge</li>
-    <li>Harper's Ferry</li>
-</ul>
 
 </body>  
-</html>
+
+<div class="container-fluid p-5 bg-primary text-white text-center">
+    <h1>Key Attractions</h1>
+    <p>Resize this responsive page to see the effect!</p>
+</div>
+
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-sm-4">
+            <h3 style="text-center-align;">Cooper's Rock</h3>
+            <p></p>
+            <p></p>
+        </div>
+        <div class="col-sm-4">
+            <h3 style="text-center-align;">Harper's Ferry</h3>
+        </div>
+        <div class="col-sm-4">
+            <h3 style="text-center-align;">New River Gorge Bridge</h3>
+       </div>
+    </div>
+</div>
+
   
