--- a/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/Information.cshtml
+++ b/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/Information.cshtml
@@ -15,13 +15,13 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #e9e9e9;
+            background-color: #002855;
 }
 
 .topnav a {
   float: left;
   display: block;
-  color: black;
+  color: #EAAA00;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -34,7 +34,7 @@ body {
 }
 
 .topnav a.active {
-  background-color: #2196F3;
+ background-color: #002855;
   color: white;
 }
 
@@ -52,7 +52,7 @@ body {
   .topnav input[type=text] {
     border: 1px solid #ccc;  
   }
-}
+
 </style>
 </head>
 <body>
@@ -78,30 +78,14 @@ body {
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
-    .button {
-        background-color: #8C6D09;
-        color: white;
-        padding: 16px 32px;
-        display: inline-block;
-        margin: 4px 2px;
-        -webkit-transition-duration: 0.4s; /* Safari */
-        transition-duration: 0.4s;
-    }
-
-    .button1{
-        background-color:#8C6D09;
-        color: #FFF;
-    }
-
-    #paragraph
-    {
-        display: none;
-    }
+        #paragraph {
+            display: none; 
+        }
     </style>
 </head>
 <body>
 
-    <button onclick="displayInfo();" class="btn btn-primary">Surprise</button>
+    <button onclick="displayInfo();" class="btn btn-primary" style="background-color:#002855; color:#EAAA00">Surprise</button>
 
     <!-- Carousel -->
     <div id="demo" class="carousel slide" data-bs-ride="carousel" style="width: 60%; margin: auto;">
@@ -116,13 +100,13 @@ body {
         <!-- The slideshow/carousel -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://www.tripsavvy.com/thmb/Eu3pAHyrfCIYkkQthB3XSGxo1vg=/2121x1414/filters:fill(auto,1)/GettyImages-544336471-west-virginia-58f65afe3df78ca159007c75.jpg" alt="Los Angeles" class="d-block" style="width:100%">
+                <img src="https://www.tripsavvy.com/thmb/Eu3pAHyrfCIYkkQthB3XSGxo1vg=/2121x1414/filters:fill(auto,1)/GettyImages-544336471-west-virginia-58f65afe3df78ca159007c75.jpg" alt="Capital like building in West Virginia" class="d-block" style="width:100%">
             </div>
             <div class="carousel-item">
-                <img src="https://wallpaperaccess.com/full/1665903.jpg" alt="Chicago" class="d-block" style="width:100%">
+                <img src="https://wallpaperaccess.com/full/1665903.jpg" alt="scenic rock view in West Virginia" class="d-block" style="width:100%">
             </div>
             <div class="carousel-item">
-                <img src="https://th.bing.com/th/id/R.a4a5b665a9a60beffa2aae4a2a1f05ce?rik=MWQMdQ%2fkwnacqg&pid=ImgRaw&r=0" alt="New York" class="d-block" style="width:100%">
+                <img src="https://th.bing.com/th/id/R.a4a5b665a9a60beffa2aae4a2a1f05ce?rik=MWQMdQ%2fkwnacqg&pid=ImgRaw&r=0" alt="image of the gorge bridge" class="d-block" style="width:100%">
             </div>
         </div>
 
