--- a/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/HospitalitySearch/Create.cshtml
+++ b/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/HospitalitySearch/Create.cshtml
@@ -30,8 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Hospitality.Lid" class="control-label"></label>
-                <input asp-for="Hospitality.Lid" class="form-control" />
-                <span asp-validation-for="Hospitality.Lid" class="text-danger"></span>
+                <select asp-for="Hospitality.Lid" class ="form-control" asp-items="ViewBag.Lid"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
