--- a/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/HospitalitySearch/Delete.cshtml
+++ b/MIS353_ApplicationGroupKEAH/MIS353_ApplicationGroupKEAH/Pages/HospitalitySearch/Delete.cshtml
@@ -31,10 +31,10 @@
             @Html.DisplayFor(model => model.Hospitality.Hrating)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Hospitality.Lid)
+            @Html.DisplayNameFor(model => model.Hospitality.LidNavigation)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Hospitality.Lid)
+            @Html.DisplayFor(model => model.Hospitality.LidNavigation.Lid)
         </dd>
     </dl>
     
