added Pages to WV2.1

--- a/MIS353_ApplicationGroupKEAH/AdventureWV2.1/Pages/Index.cshtml
+++ b/MIS353_ApplicationGroupKEAH/AdventureWV2.1/Pages/Index.cshtml
@@ -4,7 +4,33 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="container-fluid p-5 bg-primary text-white text-center" style="background-image: url('https://cdn.britannica.com/01/94601-050-65BA28A4/Sandstone-Falls-New-River-Gorge-National-West.jpg'); height: 650px; width: 100%;">
+    <h2 style="font-family:'Playfair Display', serif; font-size:60px;">Welcome to</h2>
+    <h1 style="font-family:'Playfair Display', serif; font-size:120px;">West Virgina</h1>
+    <button class="btn btn-primary" style="background-color: blue">Start Your Adventure</button>
 </div>
+
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-sm-4">
+            <h3>Activities</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            <button class="btn btn-primary">Learn More</button>
+        </div>
+        <div class="col-sm-4">
+            <h3>Eats</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            <button class="btn btn-primary">Learn More</button>
+        </div>
+        <div class="col-sm-4">
+            <h3>Lodging</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            <button class="btn btn-primary">Learn More</button>
+        </div>
+    </div>
+</div>
+
