--- a/MIS353_ApplicationGroupKEAH/AdventureWV2.1/Pages/Shared/_Layout.cshtml
+++ b/MIS353_ApplicationGroupKEAH/AdventureWV2.1/Pages/Shared/_Layout.cshtml
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - AdventureWV2._1</title>
+    <title> Application Project</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/AdventureWV2._1.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/MIS353_ApplicationGroupKEAH.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">AdventureWV2._1</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Welcome to West Virginia</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,6 +25,29 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Information">Information</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/map">Map</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Contacts">Contacts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/HospitalityCRUD/Index">Hospitality</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/LandmarkCRUD/Index">Landmarks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/usertravelCRUD/Index">User Travel</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/TravelplanCRUD/Index">Travel Plans</a>
+                        </li>
+
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -39,7 +62,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - AdventureWV2._1 - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2024 - MIS353_ApplicationGroupKEAH - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
